--- a/apps/mediastack/Chart.yaml
+++ b/apps/mediastack/Chart.yaml
@@ -24,5 +24,5 @@ dependencies:
     version: "> 1.0.0"
     repository: https://k8s-at-home.com/charts/
   - name: bazarr
-    repository: https://geek-cookbook.github.io/charts/
-    version: "> 0.0.0"
+    repository: https://k8s-at-home.com/charts/
+    version: "> 1.0.0"
