--- a/apps/mediastack/values.yaml
+++ b/apps/mediastack/values.yaml
@@ -262,39 +262,73 @@ prowlarr:
         - secretName: prowlarr-tls-certificate
           hosts:
             - *host
-bazarr:
+# bazarr:
   # image:
   #   repository: linuxserver/bazarr
   #   tag: latest
+  # controller:
+  #   replicas: 1
+  # podSecurityContext:
+  #   runAsUser: 911
+  #   runAsGroup: 911
+  #   fsGroup: 911
+  #   supplementalGroups: []
+  #   fsGroupChangePolicy: OnRootMismatch
+  # securityContext:
+  #   readOnlyRootFilesystem: false
+  #   allowPrivilegeEscalation: true
+  #   privileged: true
+  # env:
+  #   TZ: Europe/Zurich
+  # persistence:
+  #   config:
+  #     enabled: true
+  #     size: 1Gi
+  #   media:
+  #     enabled: true
+  #     mountPath: /data
+  #     existingClaim: mediastack-data
+  # ingress:
+  #   main:
+  #     enabled: true
+  #     ingressClassName: nginx
+  #     annotations:
+  #       cert-manager.io/cluster-issuer: letsencrypt-prod
+  #       hajimari.io/appName: bazarr
+  #       hajimari.io/icon: pirate
+  #       hajimari.io/group: arr
+  #     hosts:
+  #       - host: &host bazarr.tribz.cloud
+  #         paths:
+  #           - path: /
+  #             pathType: Prefix
+  #     tls:
+  #       - secretName: bazarr-tls-certificate
+  #         hosts:
+  #           - *host
+bazarr:
   controller:
     replicas: 1
-  podSecurityContext:
-    runAsUser: 911
-    runAsGroup: 911
-    fsGroup: 911
-    supplementalGroups: []
-    fsGroupChangePolicy: OnRootMismatch
-  securityContext:
-    readOnlyRootFilesystem: false
-    allowPrivilegeEscalation: true
-    privileged: true
   env:
     TZ: Europe/Zurich
   persistence:
     config:
       enabled: true
-      size: 1Gi
-    media:
+      size: 2Gi
+    data:
       enabled: true
       mountPath: /data
       existingClaim: mediastack-data
+  image:
+    repository: linuxserver/bazarr
+    tag: develop
   ingress:
     main:
       enabled: true
       ingressClassName: nginx
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod
-        hajimari.io/appName: bazarr
+        hajimari.io/appName: Bazarr
         hajimari.io/icon: pirate
         hajimari.io/group: arr
       hosts:
