--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -49,7 +49,7 @@ spec:
             - name: MASTER_LOGIN
               value: Zucky10Bucky
             - name: MASTER_PASSWORD
-              value: ceXFZ3[bFgEwSl2(
+              value: QGPvyvJ[9Pb-tbm{
             - name: SERVER_NAME
               value: Ridiculous
             - name: XMLRPC_ALLOWREMOTE
