--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -5,10 +5,10 @@ ingress-nginx:
     kind: DaemonSet
     admissionWebhooks:
       timeoutSeconds: 30
-    # metrics:
-    #   enabled: true
-    #   serviceMonitor:
-    #     enabled: true
+    metrics:
+      enabled: true
+      serviceMonitor:
+        enabled: true
   tcp:
     22: gitea/gitea-ssh:22
     2049: external-ingress/truenas:2049
