--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -77,7 +77,7 @@ grafana:
       access: proxy
       # url: https://elasticsearch.tribz.cloud
       url: "http://elasticsearch-master.elasticsearch.svc.cluster.local:9200"
-      database: graylog_6
+      database: opnsense_filterlog_0
       jsonData:
         timeField: "timestamp"
         esVersion: "7.17.3"
