--- a/apps/mediastack/Chart.yaml
+++ b/apps/mediastack/Chart.yaml
@@ -4,7 +4,7 @@ version: 0.2.0
 dependencies:
   - name: qbittorrent
     version: "> 0.0.0"
-    repository: https://aste88.github.io/helm-charts/
+    repository: https://k8s-at-home.com/charts/
   - name: radarr
     version: "> 1.0.0"
     repository: https://k8s-at-home.com/charts/
