--- a/apps/trackmania/templates/deployment-trackmania.yaml
+++ b/apps/trackmania/templates/deployment-trackmania.yaml
@@ -49,7 +49,7 @@ spec:
             - name: MASTER_LOGIN
               value: Zucky10Bucky
             - name: MASTER_PASSWORD
-              value: R%Q,B}4.=A>3J?`/2
+              value: R%Q,B}4.=A>3J?`/
             - name: SERVER_NAME
               value: Ridiculous
             - name: XMLRPC_ALLOWREMOTE
