--- a/apps/zammad/values.yaml
+++ b/apps/zammad/values.yaml
@@ -3,7 +3,7 @@ zammad:
     enabled: true
     className: nginx
     annotations:
-      kubernetes.io/ingress.class: "nginx"
+      # kubernetes.io/ingress.class: "nginx"
       cert-manager.io/cluster-issuer: letsencrypt-prod
       external-dns.alpha.kubernetes.io/target: "homelab-tunnel.tribz.cloud"
       external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
