--- a/platform/authelia/Chart.yaml
+++ b/platform/authelia/Chart.yaml
@@ -5,3 +5,6 @@ dependencies:
   - name: authelia
     version: 0.8.*
     repository: https://charts.authelia.com
+  - name: redis
+    version: 18.*.*
+    repository: https://charts.bitnami.com/bitnami
