--- a/platform/keycloak/values.yaml
+++ b/platform/keycloak/values.yaml
@@ -6,12 +6,8 @@ keycloak:
       cert-manager.io/cluster-issuer: letsencrypt-prod
       hajimari.io/appName: Keycloak
       hajimari.io/icon: git
-    ingressClassName: ingress-nginx
+    ingressClassName: nginx
     hostname: keycloak.tribz.cloud
-    # tls: true
+    tls: true
     hosts:
       - &host graylog.tribz.cloud
-    tls:
-      - secretName: graylog-tls-certificate
-        hosts:
-          - *host
