--- a/platform/keycloak/values.yaml
+++ b/platform/keycloak/values.yaml
@@ -9,3 +9,8 @@ keycloak:
     ingressClassName: nginx
     hostname: keycloak.tribz.cloud
     tls: true
+  postgresql:
+    auth:
+      password: "pass"
+  externalDatabas:
+    password: "pass"
