--- a/apps/mediastack/values.yaml
+++ b/apps/mediastack/values.yaml
@@ -42,7 +42,7 @@ radarr:
     TZ: Europe/Zurich
   image:
     repository: linuxserver/radarr
-    tag: latest
+    tag: nightly
   persistence:
     config:
       enabled: true
