--- a/platform/keycloak/Chart.yaml
+++ b/platform/keycloak/Chart.yaml
@@ -3,5 +3,5 @@ name: keycloak
 version: 0.0.0
 dependencies:
   - name: keycloak
-    version: 16.1.*
+    version: 17.*.*
     repository: https://charts.bitnami.com/bitnami
