--- a/platform/keycloak/values.yaml
+++ b/platform/keycloak/values.yaml
@@ -14,3 +14,6 @@ keycloak:
       password: "pass"
   externalDatabase:
     password: "pass"
+  extraEnvVars:
+    - name: KC_HOSTNAME_ADMIN_URL
+      value: https://keycloak.tribz.cloud
