--- a/platform/keycloak/values.yaml
+++ b/platform/keycloak/values.yaml
@@ -14,7 +14,7 @@ keycloak:
       password: "pass"
   externalDatabase:
     password: "pass"
-  extraEnvVars:
-    - name: KC_HOSTNAME_ADMIN_URL
-      value: https://keycloak.tribz.cloud
+  # extraEnvVars:
+  #   - name: KC_HOSTNAME_ADMIN_URL
+  #     value: https://keycloak.tribz.cloud
   proxy: reencrypt
