--- a/platform/keycloak/values.yaml
+++ b/platform/keycloak/values.yaml
@@ -18,3 +18,5 @@ keycloak:
   #   - name: KC_HOSTNAME_ADMIN_URL
   #     value: https://keycloak.tribz.cloud
   proxy: reencrypt
+  auth:
+    adminUser: admin
