--- a/apps/guacamole/values.yaml
+++ b/apps/guacamole/values.yaml
@@ -12,7 +12,8 @@ guacamole:
     hosts:
       - host: &host guacamole.tribz.cloud
         paths:
-          - /
+          - path: /guacamole
+            pathType: Prefix
     tls:
       - secretName: guacamole-tls-certificate
         hosts:
