--- a/apps/guacamole/values.yaml
+++ b/apps/guacamole/values.yaml
@@ -12,8 +12,7 @@ guacamole:
     hosts:
       - host: &host guacamole.tribz.cloud
         paths:
-          - path: /guacamole
-            pathType: Prefix
+          - /guacamole
     tls:
       - secretName: guacamole-tls-certificate
         hosts:
