--- a/apps/home-assistant/Chart.yaml
+++ b/apps/home-assistant/Chart.yaml
@@ -4,4 +4,4 @@ version: 0.0.0
 dependencies:
   - name: home-assistant
     version: 14.0.1
-    repository: https://k8s-at-home.com/charts
+    repository: https://k8s-home-lab.github.io/helm-charts
