--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -23,3 +23,29 @@ home-assistant:
     config:
       enabled: true
       size: 2Gi
+    config-file:
+      enabled: true
+      type: configMap
+      mountPath: /config/configuration.yaml
+  configmap:
+    config:
+      enabled: true
+      data:
+        home-assistant-config: |
+          # Loads default set of integrations. Do not remove.
+          default_config:
+
+          # Load frontend themes from the themes folder
+          frontend:
+          themes: !include_dir_merge_named themes
+
+          automation: !include automations.yaml
+          script: !include scripts.yaml
+          scene: !include scenes.yaml
+          http:
+            server_host: 0.0.0.0
+            ip_ban_enabled: true
+            login_attempts_threshold: 5
+            use_x_forwarded_for: true
+            trusted_proxies:
+              - 10.42.0.0/16
