--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -26,6 +26,9 @@ home-assistant:
     configfile:
       enabled: true
       name: home-assistant-configfile
+      items:
+        - key: configuration.yaml
+          path: configuration.yaml
       type: configMap
       mountPath:  /config/
   configmap:
