--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -31,6 +31,7 @@ home-assistant:
           path: configuration.yaml
       type: configMap
       mountPath:  /config
+      subPath: configuration.yaml
   configmap:
     configfile:
       enabled: true
