--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -19,6 +19,24 @@ home-assistant:
             - *host
   postgresql:
     enabled: true
+  initContainers:
+    - name: home-assistant-datainit
+      image: ghcr.io/home-assistant/home-assistant:2023.8.4
+      # command: ["/bin/sh", "-c"]
+      # args:
+      #   - echo starting datainit;
+      #     ls -la /server/UserData;
+      #     ls -la /datainit;
+      #     if [ -d /datainit/Config ];
+      #       then echo already preseeded;
+      #       else cp -r /server/UserData/. /datainit;
+      #       cp /datainit/Maps/MatchSettings/default.txt /datainit/Maps/MatchSettings/maplist.txt;
+      #     fi;
+      #     ls -la /datainit;
+      #     echo done;
+      volumeMounts:
+      - mountPath: /config
+        name: home-assistant-config
   persistence:
     config:
       enabled: true
