--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -25,12 +25,15 @@ home-assistant:
   initContainers:
     home-assistant-datainit:
       image: ghcr.io/home-assistant/home-assistant:2023.8.4
-      command: ["/bin/sh", "-c"]
-      args:
-        - sleep 2;
-          echo executing config-data initialization, letting it run 10 seconds;
-          sleep 10;
-          echo finished, exiting now;
+      lifecycle:
+      postStart:
+        exec:
+          command: ["/bin/sh", "-c"]
+          args:
+            - sleep 2;
+              echo executing config-data initialization, letting it run 10 seconds;
+              sleep 10;
+              echo finished, exiting now;
       volumeMounts:
       - mountPath: /config
         name: config
