--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -25,7 +25,7 @@ home-assistant:
   lifecycle:
     preStop:
       exec:
-        command: ["/bin/sh","-c","rm configuration.yaml; mv configuration.yaml_new configuration.yaml; echo finished"]
+        command: ["/bin/sh","-c","rm /config/configuration.yaml; mv /config/configuration.yaml_new /config/configuration.yaml; echo finished"]
     # preStop:
     #   exec:
     #     command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done"]
