--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -20,12 +20,16 @@ home-assistant:
   postgresql:
     enabled: true
     postgresqlUsername: home-assistant
-    postgresqlPassword: password
+    postgresqlPassword: home-assistant
     postgresqlDatabase: home-assistant
   lifecycle:
     postStart:
       exec:
-        command: ["/bin/sh","-c","rrrrm /config/configuration.yaml; mv /config/configuration.yaml_new /config/configuration.yaml; kill 1"]
+        command:
+         - "/bin/sh"
+         - "-c"
+         - "rm configuration.yaml"
+         - "mv configuration.yaml_new configuration.yaml"
     # preStop:
     #   exec:
     #     command: ["/bin/sh","-c","nginx -s quit; while killall -0 nginx; do sleep 1; done"]
@@ -73,7 +77,7 @@ home-assistant:
           
           # Database
           recorder:
-            db_url: "postgresql://home-assistant:password@home-assistant-postgresql.home-assistant/home-assistant"
+            db_url: "postgresql://home-assistant:home-assistant@home-assistant-postgresql.home-assistant/home-assistant"
             db_retry_wait: 15 # Wait 15 seconds before retrying
             exclude:
               domains:
