--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -31,8 +31,7 @@ home-assistant:
         command:
          - "/bin/sh"
          - "-c"
-         - "cp -f configuration.yaml_new configuration.yaml"
-         - "wget -O - https://get.hacs.xyz | bash -"
+         - "cp -f configuration.yaml_new configuration.yaml; wget -O - https://get.hacs.xyz | bash -"
   persistence:
     config:
       enabled: true
