--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -31,7 +31,11 @@ home-assistant:
         command:
          - "/bin/sh"
          - "-c"
-         - "cp -f configuration.yaml_new configuration.yaml; wget -O - https://get.hacs.xyz | bash -"
+         - cp -f configuration.yaml_new configuration.yaml;
+           wget -O - https://get.hacs.xyz | bash -;
+           if [ ! -n /media/ ];
+             mkdir media
+           fi;
   persistence:
     config:
       enabled: true
