--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -33,7 +33,7 @@ home-assistant:
          - "-c"
          - cp -f configuration.yaml_new configuration.yaml;
            wget -O - https://get.hacs.xyz | bash -;
-           if [ ! -n media/ ]; then
+           if [ ! -d ./media ]; then
              mkdir media;
            fi;
   persistence:
