--- a/system/monitoring-system/kustomization.yaml
+++ b/system/monitoring-system/kustomization.yaml
@@ -5,11 +5,12 @@ resources:
 - secret.yaml
 - matrix-alertmanager.yaml
 - longhorn-alerts.yaml
+- templates
 
 helmCharts:
 - name: kube-prometheus-stack
   repo: https://prometheus-community.github.io/helm-charts
-  version: 54.*.*
+  version: 54 .*.*
   releaseName: monitoring-system
   namespace: monitoring-system
   valuesFile: values.yaml
